testsuite/tests/deriving/should_fail/T5686.hs
{-# LANGUAGE TypeFamilies, DeriveFunctor #-}
module Main where

data U a = U (G a) deriving Functor

class A a where
   type G a
