testsuite/tests/deriving/should_fail/T5686.stderr
T5686.hs:4:29: error: [GHC-16437]
    • Can't make a derived instance of ‘Functor U’:
        Constructor ‘U’ must use the type variable only as the last argument of a data type
    • In the data type declaration for ‘U’

